[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "strands-agents",
    "boto3",
    "pandas",
    "sentence-transformers",
    "numpy",
    "scikit-learn",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/semcluster",
]

[project.scripts]
semcluster = "semcluster.__main__:main"
