[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=2.2.2",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
]
analysis = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
]

[project.scripts]
tag-extract = "tag_extractor.__main__:main"
tag-assign = "tag_assigner.__main__:main"
tag-analyze = "tag_analyzer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tag_extractor", "src/tag_assigner", "src/tag_analyzer"]
